test is working

--- a/scrape-wiki/data/html/0527.html
+++ b/scrape-wiki/data/html/0527.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Project","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":4,"wgPageName":"Wikipedia:WikiProject_Food_and_drink","wgTitle":"WikiProject Food and drink","wgCurRevisionId":865684341,"wgRevisionId":865684341,"wgArticleId":258844,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["MassMessage delivery lists","WikiProject Food and drink"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Wikipedia:WikiProject_Food_and_drink","wgRelevantArticleId":258844,"wgRequestId":"XFOWYQpAMFUAAHcrhJwAAABC","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q8485990","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.categoryTree.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","jquery.makeCollapsible.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Project","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":4,"wgPageName":"Wikipedia:WikiProject_Food_and_drink","wgTitle":"WikiProject Food and drink","wgCurRevisionId":865684341,"wgRevisionId":865684341,"wgArticleId":258844,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["MassMessage delivery lists","WikiProject Food and drink"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Wikipedia:WikiProject_Food_and_drink","wgRelevantArticleId":258844,"wgRequestId":"XFO8hgpAME0AAFWzjQcAAAAA","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q8485990","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","ext.categoryTree.styles":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","jquery.makeCollapsible.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["ext.categoryTree","site","mediawiki.page.startup","mediawiki.page.ready","jquery.makeCollapsible","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","mmv.head","mmv.bootstrap.autostart","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.centralNotice.geoIP","ext.centralNotice.startUp","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.categoryTree.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cjquery.makeCollapsible.styles%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -2370,7 +2370,7 @@
                         edit
                        </a>
                        |
-                       <a class="new" href="/w/index.php?title=Talk:My_Kitchen_Rules_(series_10)&amp;action=edit&amp;redlink=1" title="Talk:My Kitchen Rules (series 10) (page does not exist)">
+                       <a href="/wiki/Talk:My_Kitchen_Rules_(series_10)" title="Talk:My Kitchen Rules (series 10)">
                         talk
                        </a>
                        |
@@ -15829,12 +15829,12 @@
       </table>
       <!-- 
 NewPP limit report
-Parsed by mw1250
-Cached time: 20190201004422
+Parsed by mw1242
+Cached time: 20190201032706
 Cache expiry: 21600
 Dynamic content: true
-CPU time usage: 3.152 seconds
-Real time usage: 4.144 seconds
+CPU time usage: 3.336 seconds
+Real time usage: 4.503 seconds
 Preprocessor visited node count: 44461/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 1148583/2097152 bytes
@@ -15844,23 +15844,23 @@ Expensive parser function count: 23/500
 Unstrip recursion depth: 0/20
 Unstrip post‐expand size: 1301/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.957/10.000 seconds
-Lua memory usage: 8.98 MB/50 MB
+Lua time usage: 0.948/10.000 seconds
+Lua memory usage: 9.23 MB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 2454.223      1 -total
- 37.79%  927.429      1 Wikipedia:WikiProject_Food_and_drink/right_panel
- 28.99%  711.590      1 Wikipedia:WikiProject_Food_and_drink/assessment_infobox
- 28.89%  709.096      1 Template:Project_assessments
- 28.69%  704.171      1 Wikipedia:Version_1.0_Editorial_Team/Food_and_drink_articles_by_quality_statistics
- 28.61%  702.036      1 User:WP_1.0_bot/Tables/Project/Food_and_drink
- 24.78%  608.229      4 Template:Scrolling_window
- 24.31%  596.668      1 User:WP_1.0_bot/WikiWork
- 24.31%  596.659      2 Template:Related_portals3
- 24.18%  593.441      1 User:WP_1.0_bot/WikiWork/ta
+100.00% 2423.124      1 -total
+ 35.45%  858.897      1 Wikipedia:WikiProject_Food_and_drink/right_panel
+ 27.06%  655.759      1 Wikipedia:WikiProject_Food_and_drink/assessment_infobox
+ 26.91%  652.158      1 Template:Project_assessments
+ 26.77%  648.696      4 Template:Scrolling_window
+ 26.69%  646.797      1 Wikipedia:Version_1.0_Editorial_Team/Food_and_drink_articles_by_quality_statistics
+ 26.58%  644.030      1 User:WP_1.0_bot/Tables/Project/Food_and_drink
+ 21.56%  522.443      2 Template:Related_portals3
+ 21.29%  515.867      2 Template:For_loop
+ 21.21%  514.000      1 User:WP_1.0_bot/WikiWork
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:258844-0!canonical and timestamp 20190201004417 and revision id 865684341
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:258844-0!canonical and timestamp 20190201032702 and revision id 865684341
  -->
      </div>
      <noscript>
@@ -16370,7 +16370,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"3.152","walltime":"4.144","ppvisitednodes":{"value":44461,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":1148583,"limit":2097152},"templateargumentsize":{"value":149557,"limit":2097152},"expansiondepth":{"value":25,"limit":40},"expensivefunctioncount":{"value":23,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":1301,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00% 2454.223      1 -total"," 37.79%  927.429      1 Wikipedia:WikiProject_Food_and_drink/right_panel"," 28.99%  711.590      1 Wikipedia:WikiProject_Food_and_drink/assessment_infobox"," 28.89%  709.096      1 Template:Project_assessments"," 28.69%  704.171      1 Wikipedia:Version_1.0_Editorial_Team/Food_and_drink_articles_by_quality_statistics"," 28.61%  702.036      1 User:WP_1.0_bot/Tables/Project/Food_and_drink"," 24.78%  608.229      4 Template:Scrolling_window"," 24.31%  596.668      1 User:WP_1.0_bot/WikiWork"," 24.31%  596.659      2 Template:Related_portals3"," 24.18%  593.441      1 User:WP_1.0_bot/WikiWork/ta"]},"scribunto":{"limitreport-timeusage":{"value":"0.957","limit":"10.000"},"limitreport-memusage":{"value":9420808,"limit":52428800}},"cachereport":{"origin":"mw1250","timestamp":"20190201004422","ttl":21600,"transientcontent":true}}});mw.config.set({"wgBackendResponseTime":4322,"wgHostname":"mw1250"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"3.336","walltime":"4.503","ppvisitednodes":{"value":44461,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":1148583,"limit":2097152},"templateargumentsize":{"value":149557,"limit":2097152},"expansiondepth":{"value":25,"limit":40},"expensivefunctioncount":{"value":23,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":1301,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00% 2423.124      1 -total"," 35.45%  858.897      1 Wikipedia:WikiProject_Food_and_drink/right_panel"," 27.06%  655.759      1 Wikipedia:WikiProject_Food_and_drink/assessment_infobox"," 26.91%  652.158      1 Template:Project_assessments"," 26.77%  648.696      4 Template:Scrolling_window"," 26.69%  646.797      1 Wikipedia:Version_1.0_Editorial_Team/Food_and_drink_articles_by_quality_statistics"," 26.58%  644.030      1 User:WP_1.0_bot/Tables/Project/Food_and_drink"," 21.56%  522.443      2 Template:Related_portals3"," 21.29%  515.867      2 Template:For_loop"," 21.21%  514.000      1 User:WP_1.0_bot/WikiWork"]},"scribunto":{"limitreport-timeusage":{"value":"0.948","limit":"10.000"},"limitreport-memusage":{"value":9676251,"limit":52428800}},"cachereport":{"origin":"mw1242","timestamp":"20190201032706","ttl":21600,"transientcontent":true}}});mw.config.set({"wgBackendResponseTime":4639,"wgHostname":"mw1242"});});
   </script>
  </body>
 </html>
