--- a/scrape-wiki/data/html/0531.html
+++ b/scrape-wiki/data/html/0531.html
@@ -9,7 +9,7 @@
    document.documentElement.className = document.documentElement.className.replace( /(^|\s)client-nojs(\s|$)/, "$1client-js$2" );
   </script>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Category","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":14,"wgPageName":"Category:Webarchive_template_wayback_links","wgTitle":"Webarchive template wayback links","wgCurRevisionId":868842630,"wgRevisionId":868842630,"wgArticleId":52075556,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Hidden categories","Articles with Wayback Machine links","Tracking categories"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Category:Webarchive_template_wayback_links","wgRelevantArticleId":52075556,"wgRequestId":"XFLx@gpAAEIAADMWzTcAAADQ","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q27892622","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","mediawiki.action.view.categoryPage.styles":"ready","mediawiki.helplink":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","jquery.makeCollapsible.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","ext.tmh.thumbnail.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgCanonicalNamespace":"Category","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":14,"wgPageName":"Category:Webarchive_template_wayback_links","wgTitle":"Webarchive template wayback links","wgCurRevisionId":868842630,"wgRevisionId":868842630,"wgArticleId":52075556,"wgIsArticle":true,"wgIsRedirect":false,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":["Hidden categories","Articles with Wayback Machine links","Tracking categories"],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgPageContentModel":"wikitext","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Category:Webarchive_template_wayback_links","wgRelevantArticleId":52075556,"wgRequestId":"XFGNvApAAEQAABpfolkAAAAJ","wgCSPNonce":false,"wgIsProbablyEditable":true,"wgRelevantPageIsProbablyEditable":true,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgFlaggedRevsParams":{"tags":{}},"wgStableRevisionId":null,"wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}","wgWikiEditorEnabledModules":[],"wgBetaFeaturesFeatures":[],"wgMediaViewerOnClick":true,"wgMediaViewerEnabledByDefault":true,"wgPopupsShouldSendModuleToUser":true,"wgPopupsConflictsWithNavPopupGadget":false,"wgVisualEditor":{"pageLanguageCode":"en","pageLanguageDir":"ltr","pageVariantFallbacks":"en","usePageImages":true,"usePageDescriptions":true},"wgMFExpandAllSectionsUserOption":true,"wgMFEnableFontChanger":true,"wgMFDisplayWikibaseDescriptions":{"search":true,"nearby":true,"watchlist":true,"tagline":false},"wgRelatedArticles":null,"wgRelatedArticlesUseCirrusSearch":true,"wgRelatedArticlesOnlyUseCirrusSearch":false,"wgWMESchemaEditAttemptStepOversample":false,"wgPoweredByHHVM":true,"wgULSCurrentAutonym":"English","wgNoticeProject":"wikipedia","wgCentralNoticeCookiesToDelete":[],"wgCentralNoticeCategoriesUsingLegacy":["Fundraising","fundraising"],"wgWikibaseItemId":"Q27892622","wgScoreNoteLanguages":{"arabic":"العربية","catalan":"català","deutsch":"Deutsch","english":"English","espanol":"español","italiano":"italiano","nederlands":"Nederlands","norsk":"norsk","portugues":"português","suomi":"suomi","svenska":"svenska","vlaams":"West-Vlams"},"wgScoreDefaultNoteLanguage":"nederlands","wgCentralAuthMobileDomain":false,"wgCodeMirrorEnabled":true,"wgVisualEditorToolbarScrollOffset":0,"wgVisualEditorUnsupportedEditParams":["undo","undoafter","veswitched"],"wgEditSubmitButtonLabelPublish":true,"oresWikiId":"enwiki","oresBaseUrl":"http://ores.discovery.wmnet:8081/","oresApiVersion":3});mw.loader.state({"ext.gadget.charinsert-styles":"ready","ext.globalCssJs.user.styles":"ready","ext.globalCssJs.site.styles":"ready","site.styles":"ready","noscript":"ready","user.styles":"ready","ext.globalCssJs.user":"ready","ext.globalCssJs.site":"ready","user":"ready","user.options":"ready","user.tokens":"loading","mediawiki.action.view.categoryPage.styles":"ready","mediawiki.helplink":"ready","mediawiki.legacy.shared":"ready","mediawiki.legacy.commonPrint":"ready","jquery.makeCollapsible.styles":"ready","wikibase.client.init":"ready","ext.visualEditor.desktopArticleTarget.noscript":"ready","ext.uls.interlanguage":"ready","ext.wikimediaBadges":"ready","ext.3d.styles":"ready","ext.tmh.thumbnail.styles":"ready","mediawiki.skinning.interface":"ready","skins.vector.styles":"ready"});mw.loader.implement("user.tokens@0tffind",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"editToken":"+\\","patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});
 });RLPAGEMODULES=["mmv.head","mmv.bootstrap.autostart","site","mediawiki.page.startup","mediawiki.page.ready","jquery.makeCollapsible","mediawiki.searchSuggest","ext.gadget.teahouse","ext.gadget.ReferenceTooltips","ext.gadget.watchlist-notice","ext.gadget.DRN-wizard","ext.gadget.charinsert","ext.gadget.refToolbar","ext.gadget.extra-toolbar-buttons","ext.gadget.switcher","ext.centralauth.centralautologin","ext.popups","ext.visualEditor.desktopArticleTarget.init","ext.visualEditor.targetLoader","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.uls.eventlogger","ext.uls.init","ext.uls.compactlinks","ext.uls.interface","ext.centralNotice.geoIP","ext.centralNotice.startUp","mw.MediaWikiPlayer.loader","mw.PopUpMediaTransform","skins.vector.js"];mw.loader.load(RLPAGEMODULES);});
   </script>
   <link href="/w/load.php?debug=false&amp;lang=en&amp;modules=ext.3d.styles%7Cext.tmh.thumbnail.styles%7Cext.uls.interlanguage%7Cext.visualEditor.desktopArticleTarget.noscript%7Cext.wikimediaBadges%7Cjquery.makeCollapsible.styles%7Cmediawiki.action.view.categoryPage.styles%7Cmediawiki.helplink%7Cmediawiki.legacy.commonPrint%2Cshared%7Cmediawiki.skinning.interface%7Cskins.vector.styles%7Cwikibase.client.init&amp;only=styles&amp;skin=vector" rel="stylesheet"/>
@@ -193,12 +193,12 @@
       </p>
       <!-- 
 NewPP limit report
-Parsed by mw1271
-Cached time: 20190131130250
+Parsed by mw1273
+Cached time: 20190130114252
 Cache expiry: 2073600
 Dynamic content: false
-CPU time usage: 0.056 seconds
-Real time usage: 0.097 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.082 seconds
 Preprocessor visited node count: 408/1000000
 Preprocessor generated node count: 0/1500000
 Post‐expand include size: 7832/2097152 bytes
@@ -208,23 +208,23 @@ Expensive parser function count: 0/500
 Unstrip recursion depth: 0/20
 Unstrip post‐expand size: 8/5000000 bytes
 Number of Wikibase entities loaded: 0/400
-Lua time usage: 0.012/10.000 seconds
+Lua time usage: 0.010/10.000 seconds
 Lua memory usage: 804 KB/50 MB
 -->
       <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   83.279      1 -total
- 65.82%   54.818      1 Template:Tracking_category
- 53.97%   44.950      2 Template:Cmbox
- 15.15%   12.620      1 Template:Tld
- 10.28%    8.563      1 Template:Empty_category
-  9.61%    8.000      2 Template:Single_namespace
-  8.92%    7.427      1 Template:Tlg
-  5.71%    4.756      1 Template:Tlx
-  5.46%    4.548      1 Template:Collapse_top
-  3.87%    3.223      2 Template:Category_other
+100.00%   68.908      1 -total
+ 66.56%   45.864      1 Template:Tracking_category
+ 56.93%   39.228      2 Template:Cmbox
+ 14.50%    9.995      1 Template:Tld
+  9.84%    6.782      1 Template:Tlg
+  9.47%    6.528      1 Template:Empty_category
+  8.09%    5.577      2 Template:Single_namespace
+  7.61%    5.242      1 Template:Collapse_top
+  6.31%    4.347      1 Template:Tlx
+  4.48%    3.084      2 Template:Category_other
 -->
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:52075556-0!canonical and timestamp 20190131130250 and revision id 868842630
+      <!-- Saved in parser cache with key enwiki:pcache:idhash:52075556-0!canonical and timestamp 20190130114252 and revision id 868842630
  -->
      </div>
      <div class="mw-category-generated" dir="ltr" lang="en">
@@ -235,14 +235,14 @@ Transclusion expansion time report (%,ms,calls,template)
         Pages in category "Webarchive template wayback links"
        </h2>
        <p>
-        The following 200 pages are in this category, out of approximately 338,746 total. This list may not reflect recent changes (
+        The following 200 pages are in this category, out of approximately 338,752 total. This list may not reflect recent changes (
         <a href="/wiki/Wikipedia:FAQ/Categorization#Why_might_a_category_list_not_be_up_to_date?" title="Wikipedia:FAQ/Categorization">
          learn more
         </a>
         ).
        </p>
        (previous page) (
-       <a href="/w/index.php?title=Category:Webarchive_template_wayback_links&amp;pagefrom=1+Esdras#mw-pages" title="Category:Webarchive template wayback links">
+       <a href="/w/index.php?title=Category:Webarchive_template_wayback_links&amp;pagefrom=1+for+7+Billion+campaign#mw-pages" title="Category:Webarchive template wayback links">
         next page
        </a>
        )
@@ -1306,11 +1306,6 @@ Transclusion expansion time report (%,ms,calls,template)
              $1,000 genome
             </a>
            </li>
-           <li>
-            <a href="/wiki/$9.99" title="$9.99">
-             $9.99
-            </a>
-           </li>
           </ul>
          </div>
          <div class="mw-category-group">
@@ -1358,12 +1353,17 @@ Transclusion expansion time report (%,ms,calls,template)
              1 − 2 + 3 − 4 + ⋯
             </a>
            </li>
+           <li>
+            <a href="/wiki/1_Esdras" title="1 Esdras">
+             1 Esdras
+            </a>
+           </li>
           </ul>
          </div>
         </div>
        </div>
        (previous page) (
-       <a href="/w/index.php?title=Category:Webarchive_template_wayback_links&amp;pagefrom=1+Esdras#mw-pages" title="Category:Webarchive template wayback links">
+       <a href="/w/index.php?title=Category:Webarchive_template_wayback_links&amp;pagefrom=1+for+7+Billion+campaign#mw-pages" title="Category:Webarchive template wayback links">
         next page
        </a>
        )
@@ -2551,7 +2551,7 @@ additional terms may apply.  By using this site, you agree to the
    </div>
   </div>
   <script>
-   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.056","walltime":"0.097","ppvisitednodes":{"value":408,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":7832,"limit":2097152},"templateargumentsize":{"value":250,"limit":2097152},"expansiondepth":{"value":9,"limit":40},"expensivefunctioncount":{"value":0,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":8,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%   83.279      1 -total"," 65.82%   54.818      1 Template:Tracking_category"," 53.97%   44.950      2 Template:Cmbox"," 15.15%   12.620      1 Template:Tld"," 10.28%    8.563      1 Template:Empty_category","  9.61%    8.000      2 Template:Single_namespace","  8.92%    7.427      1 Template:Tlg","  5.71%    4.756      1 Template:Tlx","  5.46%    4.548      1 Template:Collapse_top","  3.87%    3.223      2 Template:Category_other"]},"scribunto":{"limitreport-timeusage":{"value":"0.012","limit":"10.000"},"limitreport-memusage":{"value":823255,"limit":52428800}},"cachereport":{"origin":"mw1271","timestamp":"20190131130250","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":321,"wgHostname":"mw1271"});});
+   (window.RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.052","walltime":"0.082","ppvisitednodes":{"value":408,"limit":1000000},"ppgeneratednodes":{"value":0,"limit":1500000},"postexpandincludesize":{"value":7832,"limit":2097152},"templateargumentsize":{"value":250,"limit":2097152},"expansiondepth":{"value":9,"limit":40},"expensivefunctioncount":{"value":0,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":8,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%   68.908      1 -total"," 66.56%   45.864      1 Template:Tracking_category"," 56.93%   39.228      2 Template:Cmbox"," 14.50%    9.995      1 Template:Tld","  9.84%    6.782      1 Template:Tlg","  9.47%    6.528      1 Template:Empty_category","  8.09%    5.577      2 Template:Single_namespace","  7.61%    5.242      1 Template:Collapse_top","  6.31%    4.347      1 Template:Tlx","  4.48%    3.084      2 Template:Category_other"]},"scribunto":{"limitreport-timeusage":{"value":"0.010","limit":"10.000"},"limitreport-memusage":{"value":823255,"limit":52428800}},"cachereport":{"origin":"mw1273","timestamp":"20190130114252","ttl":2073600,"transientcontent":false}}});mw.config.set({"wgBackendResponseTime":283,"wgHostname":"mw1273"});});
   </script>
  </body>
 </html>
